Added redirect to created object & bootstrap design & working create and delete forms

--- a/vacations/templates/auth/login.html
+++ b/vacations/templates/auth/login.html
@@ -3,6 +3,9 @@
 
 {% block title %}Вход в систему{% endblock %}
 
+{% block leftbar %}
+{% endblock %}
+
 {% block content %}
 <section>
     <h1>Вход в систему</h1>
