--- a/vacations/templates/vacations/add_employee.html
+++ b/vacations/templates/vacations/add_employee.html
@@ -11,7 +11,7 @@
         <table>
             {{ form.as_table }}
         </table>
-        <input type="submit" class="button" value="Добавить">
+        <input type="submit" class="btn btn-primary" value="Добавить">
     </form>
 </section>
 {% endblock %}
