--- a/vacations/templates/vacations/edit_employee.html
+++ b/vacations/templates/vacations/edit_employee.html
@@ -1,21 +1,64 @@
 {% extends "layout/basic.html" %}
+{% load static %}
 
 {% block title %}{{ employee }}{% endblock %}
 
 {% block content %}
-<section style="width = 100%">
-    <!--<h3>{{ employee }}: Редактирование</h3><hr>-->
-    <table>
-        <tr class="blue"><th class="col_detail2" style="width = 100%">{{ employee }}</th></tr>
+<form method="post">
+  {% csrf_token %}
+    <table class="form table">
+      <tr class="blue">
+          <th class="col_detail1">ФИО</th>
+          <th class="col_detail2">
+            {{ employee }}
+            <a class="" href="{% url 'vacations:details' employee.pk %}">
+              <button type="button" class="btn btn-light btn-sm float-end" >Назад</button>
+            </a>
+          </th>
+    
+      </tr>
+      <tr class="white">
+          <td class="col_detail1">Табельный номер</td>
+          <td>{{ form.personnel_number }}</td>
+      </tr>
+      <tr class="white">
+          <td class="col_detail1">Должность</td>
+          <td>{{ form.specialty }}</td>
+      </tr>
+      <tr class="gray">
+          <td class="col_detail1">Дата начала работы</td>
+          <td>{{ form.entry_date }}</td>
+      </tr>
+      <tr class="gray">
+          <td class="col_detail1">Замещает</td>
+          <td>{{ form.replaces }}</td>
+      </tr>
+      <tr class="white">
+          <td class="col_detail1">Отпускных дней в году</td>
+          <td>{{ form.max_vacation_days }}</td>
+      </tr>
+      {{ form.vacation_days.as_hidden }}
+      {{ form.department.as_hidden }}
     </table>
-    <form method="post">
-        {% csrf_token %}
-        <table class="form">
-            {{ form.as_table }}
-        </table>
-        <input type="submit" class="button" value="Сохранить">
+    {% if form.errors %}
+      {% for field in form %}
+        {% for error in field.errors %}
+          <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+          </div>
+        {% endfor %}
+      {% endfor %}
+      {% for error in form.non_field_errors %}
+        <div class="alert alert-danger" style="color: red;">
+          <strong>{{ error|escape }}</strong>
+        </div>
+      {% endfor %}
+    {% endif %}
+    <input type="submit" class="btn btn-primary" value="Сохранить">
+    <a class="" href="{% url 'vacations:employee_delete_form' employee.pk %}">
+      <button type="button" class="btn btn-danger btn-sm float-end"><img src="{% static 'images/trash.svg' %}" alt=""> Удалить</button>
+    </a>
+</form>
 
-
-    </form>
-</section>
+    
 {% endblock %}
