--- a/vacations/templates/vacations/add_employee.html
+++ b/vacations/templates/vacations/add_employee.html
@@ -4,14 +4,79 @@
 {% block add_employee %}class="active"{% endblock %}
 
 {% block content %}
-<section>
-    <h3>Добавление сотрудника</h3><hr>
+    <!--<h3>Добавление сотрудника</h3><hr>
     <form method="post">
         {% csrf_token %}
         <table>
             {{ form.as_table }}
         </table>
         <input type="submit" class="btn btn-primary" value="Добавить">
-    </form>
-</section>
+    </form>-->
+
+<form method="post">
+  {% csrf_token %}
+  <table class="form table align-middle">
+    <thead>
+      <tr class="">
+        <th class="">Добавление сотрудника</th>
+        <th class="">
+          <a class="" href="{% url 'vacations:by_department' current_department.pk %}">
+            <button type="button" class="btn btn-light btn-sm float-end" >Назад</button>
+          </a>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      {{ form.department.as_hidden }}
+      <tr class="">
+          <td class="">Фамилия</td>
+          <td>{{ form.last_name }}</td>
+      </tr>
+      <tr class="">
+          <td class="">Имя</td>
+          <td>{{ form.first_name }}</td>
+      </tr>
+      <tr class="">
+          <td class="">Отчество</td>
+          <td>{{ form.middle_name }}</td>
+      </tr>
+      <tr class="">
+          <td class="">Табельный номер</td>
+          <td>{{ form.personnel_number }}</td>
+      </tr>
+      <tr class="">
+        <td class="">Должность</td>
+        <td>{{ form.specialty }}</td>
+      </tr>
+      <tr class="">
+        <td class="">Дата начала работы</td>
+        <td>{{ form.entry_date }}</td>
+      </tr>
+      <tr class="">
+        <td class="">Замещает</td>
+        <td>{{ form.replaces }}</td>
+      </tr>
+      <tr class="">
+        <td class="">Отпускных дней в году</td>
+        <td>{{ form.max_vacation_days }}</td>
+        {{ form.vacation_days.as_hidden }}
+      </tr>
+    </tbody>
+  </table>
+  {% if form.errors %}
+    {% for field in form %}
+      {% for error in field.errors %}
+        <div class="alert alert-danger">
+          <strong>{{ error|escape }}</strong>
+        </div>
+      {% endfor %}
+    {% endfor %}
+    {% for error in form.non_field_errors %}
+      <div class="alert alert-danger" style="color: red;">
+        <strong>{{ error|escape }}</strong>
+      </div>
+    {% endfor %}
+  {% endif %}
+  <input type="submit" class="btn btn-primary" value="Сохранить">
+</form>
 {% endblock %}
