--- a/vacations/templates/vacations/by_department.html
+++ b/vacations/templates/vacations/by_department.html
@@ -6,31 +6,46 @@
 
 
 {% block content %}
-  <div class="container-left position-static row align-items-start">
-    <div class="col">
-    
-    </div>
-  </div>
-
-  <table class="table table-striped table-sm my-1">
+  <table class="table table-striped my-1 text-center align-middle">
     <thead>
-      <tr class="blue">
-        <th class="col1">Место</th>
-        <th class="col2">Рейтинг</th>
-        <th class="col3">ФИО</th>
-        <th class="col4">Замещает</th>
-        <th class="col5">Отпуска</th>
+      <tr class="">
+        <th class="col-auto">Место</th>
+        <th class="col-auto">Рейтинг</th>
+        <th class="col-auto">ФИО</th>
+        <th class="col-auto">Замещает</th>
+        <th class="col-auto">Отпуска</th>
       </tr>
     </thead>
     <tbody>
       {% for employee in employees %}
-        <tr class="{% cycle 'white' 'gray' %}"><td>{{ forloop.counter }}</td><td>{{ employee.rating }}</td><td><a href="{% url 'vacations:details' employee.pk %}">{{ employee }}</a></td><td>{% if employee.replaces is null %}Нет{% else %}<a href="{% url 'vacations:details' employee.replaces.pk %}">{{ employee.replaces }}</a>{% endif %}</td>
+        <tr class="">
+          <td>{{ forloop.counter }}</td>
+          <td>{{ employee.rating }}</td>
+          <td class="fw-bold">
+            <a class="text-decoration-none"
+               href="{% url 'vacations:details' employee.pk %}">
+              {{ employee }}
+            </a>
+          </td>
           <td>
-          {% for vacation in vacations %}
-            {% if vacation.employee.pk == employee.pk %}
-              {{ vacation.start|date:"SHORT_DATE_FORMAT" }} - {{ vacation.end|date:"SHORT_DATE_FORMAT" }}<br>
+            {% if employee.replaces is null %}
+              Нет
+            {% else %}
+              <a href="{% url 'vacations:details' employee.replaces.pk %}">
+                {{ employee.replaces }}
+              </a>
             {% endif %}
-          {% endfor %}</td></tr>
+          </td>
+          <td>
+            <!--ul class="list-group py-0 my-0"-->
+              {% for vacation in vacations %}
+                {% if vacation.employee == employee %}
+                  <label class="{% if vacation.relevance == PLANNED %}text-success
+                  {% elif vacation.relevance == ARCHIVE %}text-secondary{% endif %}">{{ vacation.start|date:"SHORT_DATE_FORMAT" }} - {{ vacation.end|date:"SHORT_DATE_FORMAT" }}</label><br>
+                {% endif %}
+              {% endfor %}
+          </td>
+        </tr>
       {% endfor %}
     </tbody>
   </table>
