--- a/vacations/templates/vacations/edit_employee.html
+++ b/vacations/templates/vacations/edit_employee.html
@@ -6,58 +6,80 @@
 {% block content %}
 <form method="post">
   {% csrf_token %}
-    <table class="form table">
-      <tr class="blue">
-          <th class="col_detail1">ФИО</th>
-          <th class="col_detail2">
-            {{ employee }}
-            <a class="" href="{% url 'vacations:details' employee.pk %}">
-              <button type="button" class="btn btn-light btn-sm float-end" >Назад</button>
-            </a>
-          </th>
-    
+  <table class="form table align-middle">
+    <thead>
+      <tr class="">
+        <th class="">Редактирование сотрудника</th>
+        <th class="">
+          <a class="" href="{% url 'vacations:details' employee.pk %}">
+            <button type="button" class="btn btn-light btn-sm float-end" >Назад</button>
+          </a>
+        </th>
       </tr>
-      <tr class="white">
-          <td class="col_detail1">Табельный номер</td>
-          <td>{{ form.personnel_number }}</td>
+    </thead>
+    <tbody>
+      <tr class="">
+        <td class="">{{ form.last_name.label }}</td>
+        <td>{{ form.last_name }}</td>
       </tr>
-      <tr class="white">
-          <td class="col_detail1">Должность</td>
-          <td>{{ form.specialty }}</td>
+      <tr class="">
+        <td class="">{{ form.first_name.label }}</td>
+        <td>{{ form.first_name }}</td>
       </tr>
-      <tr class="gray">
-          <td class="col_detail1">Дата начала работы</td>
-          <td>{{ form.entry_date }}</td>
+      <tr class="">
+        <td class="">{{ form.middle_name.label }}</td>
+        <td>{{ form.middle_name }}</td>
       </tr>
-      <tr class="gray">
-          <td class="col_detail1">Замещает</td>
-          <td>{{ form.replaces }}</td>
+      <tr class="">
+        <td class="">{{ form.personnel_number.label }}</td>
+        <td>{{ form.personnel_number }}</td>
       </tr>
-      <tr class="white">
-          <td class="col_detail1">Отпускных дней в году</td>
-          <td>{{ form.max_vacation_days }}</td>
+      <tr class="">
+        <td class="">{{ form.department.label }}</td>
+        <td><!--a class="" href="{% url 'vacations:by_department' current_department.pk %}">
+        <strong>{{ current_department }}</strong></a-->
+          {{ form.department }}
+        </td>
+        
       </tr>
-      {{ form.vacation_days.as_hidden }}
-      {{ form.department.as_hidden }}
-    </table>
-    {% if form.errors %}
-      {% for field in form %}
-        {% for error in field.errors %}
-          <div class="alert alert-danger">
-            <strong>{{ error|escape }}</strong>
-          </div>
-        {% endfor %}
-      {% endfor %}
-      {% for error in form.non_field_errors %}
-        <div class="alert alert-danger" style="color: red;">
+      <tr class="">
+        <td class="">{{ form.specialty.label }}</td>
+        <td>{{ form.specialty }}</td>
+      </tr>
+      <tr class="">
+        <td class="">{{ form.entry_date.label }}</td>
+        <td>{{ form.entry_date }}</td>
+      </tr>
+      <tr class="">
+        <td class="">{{ form.replaces.label }}</td>
+        <td>{{ form.replaces }}</td>
+      </tr>
+      <tr class="">
+        <td class="">{{ form.max_vacation_days.label }}</td>
+        <td>{{ form.max_vacation_days }}</td>
+        {{ form.vacation_days.as_hidden }}
+      </tr>
+      
+    </tbody>
+  </table>
+  {% if form.errors %}
+    {% for field in form %}
+      {% for error in field.errors %}
+        <div class="alert alert-danger">
           <strong>{{ error|escape }}</strong>
         </div>
       {% endfor %}
-    {% endif %}
-    <input type="submit" class="btn btn-primary" value="Сохранить">
-    <a class="" href="{% url 'vacations:employee_delete_form' employee.pk %}">
-      <button type="button" class="btn btn-danger btn-sm float-end"><img src="{% static 'images/trash.svg' %}" alt=""> Удалить</button>
-    </a>
+    {% endfor %}
+    {% for error in form.non_field_errors %}
+      <div class="alert alert-danger" style="color: red;">
+        <strong>{{ error|escape }}</strong>
+      </div>
+    {% endfor %}
+  {% endif %}
+  <input type="submit" class="btn btn-primary" value="Сохранить">
+  <a class="" href="{% url 'vacations:employee_delete_form' employee.pk %}">
+    <button type="button" class="btn btn-danger btn-sm float-end"><img src="{% static 'images/trash.svg' %}" alt=""> Удалить сотрудника</button>
+  </a>
 </form>
 
     
