--- a/vacations/templates/vacations/index.html
+++ b/vacations/templates/vacations/index.html
@@ -3,31 +3,55 @@
 {% block index_active %}active{% endblock %}
 
 {% block leftbar %}
-<span class="fs-5 d-none d-sm-inline"><a class="nav-link text-center"><strong>Все отделы</strong></a></span>
-<a href="{% url 'vacations:export_t7_all' %}" class="list-group-item list-group-item-action">Экспорт формы Т-7</a>
+  <span class="fs-5 d-none d-sm-inline"><a class="nav-link text-center"><strong>Все отделы</strong></a></span>
+  <a href="{% url 'vacations:export_t7_all' %}" class="list-group-item list-group-item-action">Экспорт формы Т-7</a>
 {% endblock %}
 
 {% block content %}
-{% load static %}
-<table class="table table-striped table-sm">
-  <thead>
-    <tr class="blue">
-      <th class="col1">Отдел</th>
-      <th class="col3">ФИО</th>
-      <th class="col4">Замещает</th>
-      <th class="col5">Отпуска</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for employee in employees %}
-    <tr class="{% cycle 'white' 'gray' %}"><td>{{ employee.department }}</td><td><a href="{% url 'vacations:details' employee.pk %}">{{ employee }}</a></td><td>{% if employee.replaces is null %}Нет{% else %}<a href="{% url 'vacations:details' employee.replaces.pk %}">{{ employee.replaces }}</a>{% endif %}</td>
-      <td>
-        {% for vacation in vacations %}
-        {% if vacation.employee.pk == employee.pk %}
-        {{ vacation.start|date:"SHORT_DATE_FORMAT" }} - {{ vacation.end|date:"SHORT_DATE_FORMAT" }}<br>
-        {% endif %}
-        {% endfor %}</td></tr>
-    {% endfor %}
-  </tbody>
-</table>
+  {% load static %}
+  <table class="table table-striped table-sm my-2 text-center align-middle">
+    <thead>
+      <tr class="">
+        <th scope="col" class="">Отдел</th>
+        <th scope="col" class="">ФИО</th>
+        <th scope="col" class="">Замещает</th>
+        <th scope="col" class="">Отпуска</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for employee in employees %}
+        <tr class="">
+          <td class="fw-bold">
+            <a class="text-decoration-none" href="{% url 'vacations:by_department' employee.department.pk %}">
+              {{ employee.department }}
+            </a>
+          </td>
+          <td class="fw-bold">
+            <a class="text-decoration-none"
+               href="{% url 'vacations:details' employee.pk %}">
+              {{ employee }}
+            </a>
+          </td>
+          <td>
+            {% if employee.replaces is null %}
+              -
+            {% else %}
+              <a class="text-decoration-none"
+                 href="{% url 'vacations:details' employee.replaces.pk %}">
+                {{ employee.replaces }}
+              </a>
+            {% endif %}
+          </td>
+          <td>
+            {% for vacation in vacations %}
+              {% if vacation.employee == employee %}
+                <label class="{% if vacation.relevance == PLANNED %}text-success
+                {% elif vacation.relevance == ARCHIVE %}text-secondary{% endif %}">{{ vacation.start|date:"SHORT_DATE_FORMAT" }} - {{ vacation.end|date:"SHORT_DATE_FORMAT" }}</label><br>
+              {% endif %}
+            {% endfor %}
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 {% endblock %}
