Added replaces self & department check, added force-proceed to Employee forms

--- a/vacations/templates/vacations/by_department.html
+++ b/vacations/templates/vacations/by_department.html
@@ -9,11 +9,11 @@
   <table class="table table-striped my-1 text-center align-middle">
     <thead>
       <tr class="">
-        <th class="col-auto">Место</th>
-        <th class="col-auto">Рейтинг</th>
-        <th class="col-auto">ФИО</th>
-        <th class="col-auto">Замещает</th>
-        <th class="col-auto">Отпуска</th>
+        <th class="">Место</th>
+        <th class="">Коэффициент ОС</th>
+        <th class="">ФИО</th>
+        <th class="">Замещает</th>
+        <th class="">Отпуска</th>
       </tr>
     </thead>
     <tbody>
