--- a/vacations/templates/auth/login.html
+++ b/vacations/templates/auth/login.html
@@ -7,19 +7,42 @@
 {% endblock %}
 
 {% block content %}
-<section>
-    <h1>Вход в систему</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Войти">
-    </form>
-
-    {% for message in messages %}
-        <p id="message">{{ message }}</p>
+<form method="post">
+  {% csrf_token %}
+  <table class="form table align-middle">
+    <thead>
+      <tr class="">
+        <th class="">Вход в систему</th>
+          <th class=""></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="">
+          <td class="">Имя пользователя</td>
+          <td>{{ form.username }}</td>
+      </tr>
+      <tr class="">
+          <td class="">Пароль</td>
+          <td>{{ form.password }}</td>
+      </tr>
+    </tbody>
+  </table>
+  {% if form.errors %}
+    {% for field in form %}
+      {% for error in field.errors %}
+        <div class="alert alert-danger">
+          <strong>{{ error|escape }}</strong>
+        </div>
+      {% endfor %}
     {% endfor %}
-
-</section>
+    {% for error in form.non_field_errors %}
+      <div class="alert alert-danger" style="color: red;">
+        <strong>{{ error|escape }}</strong>
+      </div>
+    {% endfor %}
+  {% endif %}
+  <input type="submit" class="btn btn-primary" value="Войти">
+</form>
 {% endblock %}
 
 
