--- a/vacations/templates/layout/basic.html
+++ b/vacations/templates/layout/basic.html
@@ -80,42 +80,67 @@
     <div class="row flex-grow-1">
       <div class="col-md-2 border px-2 py-1">
         {% block leftbar %}
-        <div class="fs-5 d-none d-sm-inline bg-primary"><a class="nav-link text-center" href="{% url 'vacations:by_department' current_department.pk %}"><strong>{{ current_department }}</strong></a></div>
-        {% if current_department.full_title is not None %}<div class="container-fluid text-center mb-2">{{ current_department.full_title }}</div>{% endif %}
-        <div class="list-group">
-          {% if user.is_department_manager or user.employees_permission_level >= edit or user.is_staff %}
-            <a href="{% url 'vacations:add_employee' current_department.pk %}" class="list-group-item list-group-item-action">Добавить сотрудника</a>
-          {% endif %}
-          {% if user.is_department_manager or user.employees_permission_level >= VIEW or user.is_staff %}
-            <a href="{% url 'vacations:recalculate_department' current_department.pk %}"
-               class="list-group-item list-group-item-action"
-               title="Пересчитать значения отпускных дней по месяцам и коэффицентов 'отпускного счастья' на основе заданных отпусков">
-              Пересчитать отдел
-            </a>
-            <a href="{% url 'vacations:export_t7_department' current_department.pk %}"
-               class="list-group-item list-group-item-action"
-               title="Экспортировать данные об отпусках текущего года в форму Т-7">
-              Экспорт формы Т-7
-            </a>
-          {% endif %}
-        </div>
-        <div class="container border">
-          Отпускные дни по месяцам:
-          <table class="table table-bordered table-sm my-1">
-            {% load humanize %}
-            {% for month, num  in vacation_days_by_month %}
-              <tr class="{% if num < 0 %}table-secondary{% endif %}"><td>{{ month }}</td><td>{{ num }}</td></tr>
-            {% endfor %}
-          </table>
-        </div>
-        <div class="container-fluid px-0">
-          <ul class="list-group mx-0 px-0">
-            <li class="list-group-item mx-0 px-1">Цветовые обозначения отпусков:</li>
-            <li class="list-group-item my-0 py-0 mx-0 px-1 text-success">За текущий год</li>
-            <li class="list-group-item my-0 py-0 mx-0 px-1">За последние 3 года</li>
-            <li class="list-group-item my-0 py-0 mx-0 px-1 text-secondary">За предыдущие периоды</li>
-          </ul>
-        </div>
+          <div class="fs-5 d-none d-sm-inline bg-primary"><a class="nav-link text-center" href="{% url 'vacations:by_department' current_department.pk %}"><strong>{{ current_department }}</strong></a></div>
+            {% if current_department.full_title is not None %}
+              <div class="container-fluid text-center mb-2">
+                {{ current_department.full_title }}
+              </div>
+            {% endif %}
+            <div class="list-group">
+              {% if user.is_department_manager or user.employees_permission_level >= edit or user.is_staff %}
+                <a href="{% url 'vacations:add_employee' current_department.pk %}"
+                   class="list-group-item list-group-item-action">
+                  Добавить сотрудника
+                </a>
+              {% endif %}
+              {% if user.is_department_manager or user.employees_permission_level >= VIEW or user.is_staff %}
+                <a href="{% url 'vacations:recalculate_department' current_department.pk %}"
+                   class="list-group-item list-group-item-action"
+                   title="Пересчитать значения отпускных дней по месяцам и коэффицентов 'отпускного счастья' на основе заданных отпусков">
+                  Пересчитать отдел
+                </a>
+              
+                <div class="btn-group dropend">
+                  <button type="button"
+                          class="list-group-item list-group-item-action dropdown-toggle text-break"
+                          data-bs-toggle="dropdown"
+                          aria-expanded="false"
+                          title="Экспортировать данные об отпусках в выбранном году в форму Т-7">
+                    Экспорт Т-7
+                  </button>
+                  <ul class="dropdown-menu">
+                    {% for year in relevant_years %}
+                      <li><a class="dropdown-item" href="{% url 'vacations:export_t7_department' current_department.pk year %}">{{ year }}</a></li>
+                    {% endfor %}
+                  </ul>
+                </div>
+              
+              {% endif %}
+              {% if user.is_department_manager or user.employees_permission_level >= edit or user.is_staff %}
+                <a href="{% url 'vacations:department_delete_form' current_department.pk %}"
+                   class="list-group-item list-group-item-action list-group-item-danger">
+                  Удалить отдел
+                </a>
+              {% endif %}
+            </div>
+            <div class="container border">
+              Отпускные дни по месяцам:
+              <table class="table table-bordered table-sm my-1">
+                {% load humanize %}
+                {% for month, num  in vacation_days_by_month %}
+                  <tr class="{% if num < 0 %}table-secondary{% endif %}"><td>{{ month }}</td><td>{{ num }}</td></tr>
+                {% endfor %}
+              </table>
+            </div>
+            <div class="container-fluid px-0">
+              <ul class="list-group mx-0 px-0">
+                <li class="list-group-item mx-0 px-1">Цветовые обозначения отпусков:</li>
+                <li class="list-group-item my-0 py-0 mx-0 px-1 text-success">За текущий год</li>
+                <li class="list-group-item my-0 py-0 mx-0 px-1">За последние 3 года</li>
+                <li class="list-group-item my-0 py-0 mx-0 px-1 text-secondary">За предыдущие периоды</li>
+              </ul>
+            </div>
+        
         {% endblock %}
       </div>
       <div class="col-md-10 border px-3 py-2">
