--- a/vacations/templates/vacations/delete_department.html
+++ b/vacations/templates/vacations/delete_department.html
@@ -1,14 +1,24 @@
 {% extends "layout/basic.html" %}
 
-{% block title %}Удаление сотрудника{% endblock %}
+{% block title %}Удаление отдела{% endblock %}
 
 {% block content %}
-<section>
-
-        <h1>Delete post</h1>
-    <form action="" method="post">{% csrf_token %}
-      <p>Are you sure you want to delete "{{ department }}"?</p>
-      <input type="submit" value="Confirm" />
-    </form>
-</section>
+<form method="post">
+  {% csrf_token %}
+  <table class="form table align-middle">
+    <thead>
+      <tr class="">
+        <th class="">Удалить отдел</th>
+        <th class="">
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="">
+          <td class="border-0">Вы уверены, что хотите удалить отдел {{ current_department }})?</td>
+      </tr>
+    </tbody>
+  </table>
+  <input type="submit" class="btn btn-danger" value="Удалить">
+</form>
 {% endblock %}
