--- a/vacations/templates/vacations/delete_employee.html
+++ b/vacations/templates/vacations/delete_employee.html
@@ -3,11 +3,22 @@
 {% block title %}Удаление сотрудника{% endblock %}
 
 {% block content %}
-<section>
-    <h1>Удалить сотрудника</h1>
-    <form action="" method="post">{% csrf_token %}
-      <p>Вы уверены, что хотите удалить сотрудника "{{ employee }}"?</p>
-      <input type="submit" value="Confirm" />
-    </form>
-</section>
+<form method="post">
+  {% csrf_token %}
+  <table class="form table align-middle">
+    <thead>
+      <tr class="">
+        <th class="">Удалить сотрудника</th>
+        <th class="">
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="">
+          <td class="border-0">Вы уверены, что хотите удалить сотрудника {{ employee }})?</td>
+      </tr>
+    </tbody>
+  </table>
+  <input type="submit" class="btn btn-danger" value="Удалить">
+</form>
 {% endblock %}
